# pypgm

./: README.md  pyproject.toml
src/: factors.py  utils.py
tests/: test_factors.py
